# nimble-research-harness

./: .env.example  .gitignore  README.md  pyproject.toml
benchmarks/: golden_40.jsonl
examples/: account_intel.py  alt_data.py  batch_research.py  brand_monitor.py  competitive_pricing.py  deep_investigation.py  due_diligence.py  follow_up_research.py  location_intel.py  map_compliance.py  market_research.py  product_shopping.py  quick_lookup.py  rate_parity.py  social_listening.py  training_data.py  travel_research.py
src/nimble_research_harness/: __init__.py  cli.py  serve.py
src/nimble_research_harness/agents/: analyst.py  base.py  intake.py  monitor.py  planner.py  researcher.py  skill_builder.py  verifier.py
src/nimble_research_harness/benchmark/: __init__.py  analyzer.py  browsecomp.py  runner.py
src/nimble_research_harness/budget/: presets.py
src/nimble_research_harness/deepresearch/: __init__.py  agentic.py  candidates.py  decomposer.py  engine.py  prompts.py  searcher.py  state.py  verifier.py
src/nimble_research_harness/infra/: context.py  errors.py  events.py  hooks.py  logging.py  retry.py
src/nimble_research_harness/models/: __init__.py  discovery.py  enums.py  plan.py  (+5 more)
tests/: conftest.py  test_cli.py  test_events.py  test_exporter.py  test_gates.py  test_hooks.py  test_new_models.py
tests/test_agents/: test_intake.py
tests/test_models/: test_discovery.py  test_evidence.py  test_session.py
tests/test_nimble/: test_mock.py
tests/test_storage/: test_json_backend.py
tests/test_tools/: test_registry.py
tests/test_wsa/: test_scorer.py
(+19 files in other folders)
